[package]
name = "flag_set"
version = "0.1.6"
authors = ["WeiyvWang <ziranjuangu@outlook.com>"]
description = "FlagSet can process operations of the infinite complementary sets and the origin sets."
license = "MIT/Apache-2.0"
edition = "2018"

repository = "https://github.com/WeiyvWang/flag_set"
documentation = "https://docs.rs/flag_set"

keywords = ["HashSet"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
